--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "underwebpack",
+  "name": "wp-webpack-gulp",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -22,6 +22,7 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-cssnano": "^2.1.2",
+    "gulp-file-include": "^1.2.0",
     "gulp-imagemin": "^3.4.0",
     "gulp-notify": "^3.0.0",
     "gulp-plumber": "^1.1.0",
