--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "barba.js": "^1.0.0",
+    "gsap": "^1.20.3",
     "jquery": "^3.2.1",
     "slick-carousel": "^1.8.1"
   }
