gulpfile.js fixed

--- a/package.json
+++ b/package.json
@@ -20,13 +20,11 @@
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
     "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^4.0.0",
-    "gulp-cssnano": "^2.1.2",
     "gulp-file-include": "^1.2.0",
     "gulp-imagemin": "^3.4.0",
     "gulp-notify": "^3.0.0",
+    "gulp-pleeease": "^2.0.2",
     "gulp-plumber": "^1.1.0",
-    "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-watch": "^4.3.11",
     "webpack": "^3.7.1",
